--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/field"/>
+        android:src="@drawable/field" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,16 +18,17 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/pain"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:textColor="#fff"
-            android:padding="8dp"
-            android:textSize="22dp"
-            android:textAllCaps="true"
             android:background="#ff4646"
-            android:visibility="invisible"
-            android:text="Какая боль! Какая боль!"/>
+            android:gravity="center_horizontal"
+            android:padding="8dp"
+            android:text="Какая боль! Какая боль!"
+            android:textAllCaps="true"
+            android:textColor="#fff"
+            android:textSize="22dp"
+            android:visibility="invisible" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,32 +38,32 @@
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:gravity="center_horizontal"
-                android:textColor="#ddd"
                 android:padding="8dp"
-                android:textSize="18dp"
-                android:text="Аргентина" />
+                android:text="Аргентина"
+                android:textColor="#ddd"
+                android:textSize="18dp" />
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:gravity="center_horizontal"
-                android:textColor="#ddd"
                 android:padding="8dp"
-                android:textSize="18dp"
-                android:text="Ямайка" />
+                android:text="Ямайка"
+                android:textColor="#ddd"
+                android:textSize="18dp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#004b04"
+            android:orientation="horizontal"
             android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:orientation="horizontal">
+            android:paddingRight="12dp">
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -78,11 +79,12 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/goals_arg"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
                 android:gravity="center"
-                android:text="5"
+                android:text="0"
                 android:textColor="#ddd"
                 android:textSize="48sp" />
 
@@ -96,6 +98,7 @@
                 android:textSize="48sp" />
 
             <TextView
+                android:id="@+id/goals_jam"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
@@ -121,129 +124,139 @@
 
         </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#004b04"
+            android:orientation="horizontal"
+            android:paddingBottom="12dp"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp">
+
+            <TextView
+                android:id="@+id/fouls_arg"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="#004b04"
-                android:paddingLeft="24dp"
-                android:paddingRight="24dp"
-                android:paddingBottom="12dp"
-                android:orientation="horizontal">
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="#555"
+                android:gravity="center_horizontal"
+                android:padding="2dp"
+                android:text="0"
+                android:textColor="#ddd"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal"
-                    android:background="#555"
-                    android:textColor="#ddd"
-                    android:padding="2dp"
-                    android:layout_margin="4dp"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:text="0" />
+            <TextView
+                android:id="@+id/yellows_arg"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="#ffcf00"
+                android:gravity="center_horizontal"
+                android:padding="2dp"
+                android:text="0"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal"
-                    android:background="#ffcf00"
-                    android:padding="2dp"
-                    android:layout_margin="4dp"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:text="0" />
+            <TextView
+                android:id="@+id/reds_arg"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="#ff4646"
+                android:gravity="center_horizontal"
+                android:padding="2dp"
+                android:text="0"
+                android:textColor="#ddd"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal"
-                    android:background="#ff4646"
-                    android:textColor="#ddd"
-                    android:padding="2dp"
-                    android:layout_margin="4dp"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:text="0" />
+            <View
+                android:layout_width="24dp"
+                android:layout_height="10dp" />
 
-                <View
-                    android:layout_width="24dp"
-                    android:layout_height="10dp"/>
+            <TextView
+                android:id="@+id/fouls_jam"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="#555"
+                android:gravity="center_horizontal"
+                android:padding="2dp"
+                android:text="0"
+                android:textColor="#ddd"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal"
-                    android:background="#555"
-                    android:textColor="#ddd"
-                    android:padding="2dp"
-                    android:layout_margin="4dp"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:text="0" />
+            <TextView
+                android:id="@+id/yellows_jam"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="#ffcf00"
+                android:gravity="center_horizontal"
+                android:padding="2dp"
+                android:text="0"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal"
-                    android:background="#ffcf00"
-                    android:padding="2dp"
-                    android:layout_margin="4dp"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:text="0" />
+            <TextView
+                android:id="@+id/reds_jam"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:layout_weight="1"
+                android:background="#ff4646"
+                android:gravity="center_horizontal"
+                android:padding="2dp"
+                android:text="0"
+                android:textColor="#ddd"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal"
-                    android:background="#ff4646"
-                    android:textColor="#ddd"
-                    android:padding="2dp"
-                    android:layout_margin="4dp"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:text="0" />
-
-            </LinearLayout>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="4dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingTop="4dp">
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:orientation="vertical"
                 android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:orientation="vertical">
+                android:paddingRight="16dp">
 
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:onClick="addGoalForArg"
                     android:text="Гол" />
 
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:onClick="addYellowForArg"
                     android:text="Желтая" />
 
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:onClick="addRedForArg"
                     android:text="Красная" />
 
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:onClick="addFoulForArg"
                     android:text="Фол" />
             </LinearLayout>
 
@@ -251,38 +264,44 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:orientation="vertical"
                 android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:orientation="vertical">
+                android:paddingRight="16dp">
 
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:onClick="addGoalForJam"
                     android:text="Гол" />
 
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:onClick="addYellowForJam"
                     android:text="Желтая" />
 
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:onClick="addRedForJam"
                     android:text="Красная" />
 
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:onClick="addFoulForJam"
                     android:text="Фол" />
             </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginBottom="4dp"
+        android:onClick="resetScore"
         android:text="Сброс" />
 </RelativeLayout>
